2005-07-19  Jeremy Cribb <jcribb@email.unc.edu>
	* percent_recovery.m: added.  computes the percent recovery of vector.

2005-06-29  Jeremy Cribb <jcribb@email.unc.edu>
	* evaluateKK.m: fixed bug where variable for tolerance (eta) was inadvertantly placed inside an if-statement.
	* kkr.m: reworked for use with current version of evaluateKK.m.
	* visc_ps: reinserted figure.  added karo line to standard plot as a 'guide for the eye'
	* get_video_viscs.m: reworked to take advantage of current version of load_video_tracking.  Now multiple files are handled by load_video_tracking, each tracker is handled at exactly its own time points (no substituted zeros to fill in matrix), and a mean power spectrum across all beads computed.  Used linear interpolation to put all power spectra on the same grid.
	* get_vrpn_viscs.m: reworked for use with current version of load_vrpn_tracking.

2005-06-09  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: fixed a bug where, when asked for only one time constant, nothing would happen.
	* relaxtime_fun.m: same.

2005-06-09  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: added.  This function uses non-linear least squares fitting procedures to compute any number of time constants for creep-relaxation data.  A Kelvin-Voight model was used for equation construction.
	* relaxtime_fun.m: added.  contains the fitting function for relaxation_time.m.

2005-04-14  Jeremy Cribb <jcribb@email.unc.edu>
	* VE_fluid_model:  removed warning for dividing by zero.  

2005-03-31  Jeremy Cribb <jcribb@email.unc.edu>
	* cone_and_plate:  added this folder for cone_and_plate specific rheology code.

2004-11-04  Jeremy Cribb <jcribb@email.unc.edu>
	* sucrose_viscosity.m:  added the ability to input temperature in Celsius and Kelvin.

2004-10-31  Jeremy Cribb <jcribb@email.unc.edu>
	* driven_bead: added.  contains code for running and analyzing driven bead microrheology experiments.

2004-10-23  Jeremy Cribb <jcribb@email.unc.edu>